fix image alignment being ignored

--- a/gsoc/static/css/article.css
+++ b/gsoc/static/css/article.css
@@ -173,3 +173,12 @@ article > heading {
 form textarea {
     border-radius: 0 0 4px 4px !important;
 }
+
+.align-right {
+    display: block;
+    margin-left: auto;
+}
+
+.align-center {
+    text-align:center;
+}
